--- a/assets/style.css
+++ b/assets/style.css
@@ -1,53 +1,81 @@
-body{
-    display: flex;
-    justify-content: center;
-    font-family: monospace;
-    font-weight: bold;
+* {
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
-#calculadora{
-    position: relative;
-    width: 320px;
-    height: 540px;
-    background-image: url(img/calculadorabg.png);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+body {
+  display: flex;
+  justify-content: center;
+  font-family: monospace;
+  font-weight: bold;
+  background: linear-gradient(#eee, #bbb);
+  height: 100vh;
 }
 
-.display{
-    background-color: rgb(184, 235, 236);
-    margin-top: 44px;
-    width: 268px;
-    height: 97px;
-    align-self: center;
-    border-radius: 5px;
-    overflow-x: auto;
-    overflow-y: hidden;
+#calculadora {
+  position: relative;
+  width: 320px;
+  height: 536px;
+  background-image: url(img/calculadorabg.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 38px;
+  box-shadow: 0px 10px 10px black;
 }
 
-P{
-    margin: 0;
-    padding: 30px 0;
-    font-size: 20px;
+#pantalla {
+  background-color: rgb(184, 235, 236);
+  margin-top: 55px;
+  width: 268px;
+  height: 97px;
+  align-self: center;
+  border-radius: 5px;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
-.botones{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    padding:0 25px;
-    
+#pantalla p {
+  margin: 0;
+  padding: 30px 0;
+  font-size: 40px;
+  text-align: right;
 }
 
-button{
-    cursor: pointer;
-    border-radius: 10px;
-    width: 100%;
-    height: 70px;
-    font-family: monospace;
-    font-weight: bold;
-    font-size: 30px;
+.botones {
+  display: grid;
+  row-gap: 5px;
+  column-gap: 5px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  padding: 0 25px;
+}
+
+button {
+  border: 0;
+  border-radius: 18px;
+  box-shadow: 7px 7px 14px #858585 inset, -7px -7px 14px #b3b3b3 inset,
+    0 1px 5px #000;
+  cursor: pointer;
+  height: 70px;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 30px;
+  margin: auto;
+  transition: all 0.2s;
+  width: 100%;
+}
+
+button:hover {
+  background-color: gray;
+}
+
+button:active {
+  background-color: #858585;
+  font-size: 25px;
+  width: 95%;
+  height: 95%;
 }
